--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
+- name: 'gcr.io/triggermesh/mkdocs:latest'
+  args: ['mkdocs', 'build']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/www:$REVISION_ID', '-t', 'gcr.io/$PROJECT_ID/www:latest', '.']
 - name: 'gcr.io/cloud-builders/docker'
