add secrets and change template

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,14 @@ site_name: TriggerMesh
 repo_url: https://github.com/triggermesh/docs
 nav:
     - Home: index.md
-    - Guides: gettingstarted.md
-    - Client: tm.md
+    - Guides:
+      - 'Getting Started': guides/gettingstarted.md
+      - 'Secrets': guides/secrets.md
+    - Client: 
+      - 'Installation': 'tm/install.md'
+      - 'Configuration': 'tm/configuration.md'
+      - 'Usage': 'tm/usage.md'
+    - Cloud: https://cloud.triggermesh.io
     - About: about.md
-theme: readthedocs
+theme:
+  name: mkdocs
