--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
       - 'Getting Started': guides/gettingstarted.md
       - 'CD': guides/cd.md
       - 'Actions': guides/actions.md
+      - 'Bridge': guides/bridge.md
       - 'Secrets': guides/secrets.md
     - Client: 
       - 'Installation': 'tm/install.md'
