add sources and targets to index and dropdown (#16)
* add sources and targets to index and dropdown

* Update docs/sources/index.md

Co-authored-by: Antoine Cotten <hello@acotten.com>

* remove the sources and targets docs from the menu

Co-authored-by: Antoine Cotten <hello@acotten.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,10 @@ nav:
       - 'Usage': 'tm/usage.md'
       - 'Registry': 'tm/registry.md'
       - 'Serverless Manifest': 'tm/serverless.md'
+    - Sources:
+      - 'Azure Activity Logs': sources/azureactivitylogs.md
+    - Targets:
+      - 'EventBridge': targets/awseventbridge.md
     - Cloud: https://cloud.triggermesh.io
     - About: about.md
 theme:
