--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-/site
-/.venv
-**/.DS_Store
+# Local configurations and secrets
+/.env/
+/.local/
+
+# Continuous integration
+
+# Editors and IDEs
+*.swo
+*.swp
+*~
+/*.sublime-project
+/*.sublime-workspace
+/.DS_Store
+/.idea/
+/.vscode/
+
+# Build artifacts
+**/_output
