style: edit the overall style of the docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: TriggerMesh
 repo_url: https://github.com/triggermesh/docs
 google_analytics: ['UA-127409524-1', 'docs.triggermesh.io']
+extra_css: [extra.css]
 nav:
     - Home: index.md
     - Guides:
