chore: address PR changes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,6 @@ repo_url: https://github.com/triggermesh/docs
 google_analytics: ['UA-127409524-1', 'docs.triggermesh.io']
 extra_css: [extra.css]
 extra_javascript: [extra.js]
-plugins:
-  - search
 nav:
     - Home: index.md
     - Guides:
@@ -25,7 +23,7 @@ nav:
     - Cloud: https://cloud.triggermesh.io
     - About: about.md
 theme:
-  name: "mkdocs"
+  name: mkdocs
   custom_dir: "custom_theme/"
 
 markdown_extensions:
