#88 - Search bar does not work (#92)
* chore: refactor intercom logic to also show search

* chore: address PR changes

* chore: address pr changes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: TriggerMesh
 repo_url: https://github.com/triggermesh/docs
 google_analytics: ['UA-127409524-1', 'docs.triggermesh.io']
 extra_css: [extra.css]
+extra_javascript: [extra.js]
 nav:
     - Home: index.md
     - Guides:
