--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-copyright: 2021, TriggerMesh
+copyright: © 2021, TriggerMesh
 site_author: TriggerMesh
 site_description: TriggerMesh's Docs
 site_name: TriggerMesh
