--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,10 +35,13 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/triggermesh
+      name: TriggerMesh on GitHub
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/company/triggermesh/
+      name: TriggerMesh on LinkedIn
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/triggermesh
+      name: TriggerMesh on Twitter
 
 markdown_extensions:
   - attr_list
