--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ site_description: Build your event driven applications in Kubernetes with Trigge
 site_name: TriggerMesh
 site_url: https://docs.triggermesh.io
 repo_url: https://github.com/triggermesh/docs
+edit_uri: edit/main/docs/
 
 extra_css:
   - extra.css
