Polishing the function guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,3 +127,6 @@ markdown_extensions:
   - attr_list
   - admonition
   - pymdownx.superfences
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
