Add redirect support and map /sources/ to /concepts/sources/
Fixes https://github.com/triggermesh/docs/issues/229

Signed-off-by: Matt Ray <github@mattray.dev>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,3 +131,8 @@ markdown_extensions:
   - def_list
   - pymdownx.tasklist:
       custom_checkbox: true
+
+plugins:
+    - redirects:
+        redirect_maps:
+            'sources.md': 'concepts/sources.md'
