--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
       - Writing a Function: guides/writingafunction.md
       - Transforming XML to JSON: guides/xmltojsontransformation.md
       - Transforming XML with XSLT: guides/xslttransformation.md
+      - Ingesting External CloudEvents: guides/cloudeventssource.md
       - Using TIL: guides/tilgettingstarted.md
       - Bridges:
         - Webhook to Slack: guides/bridges/webhook-to-slack.md
