--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
       - Creating a Splitter: guides/creatingasplitter.md
       - Doing a Transformation: guides/doingatransformation.md
       - Writing a Function: guides/writingafunction.md
+      - Transforming using DataWeave: guides/dataweavetransformation.md
       - Transforming XML to JSON: guides/xmltojsontransformation.md
       - Transforming XML with XSLT: guides/xslttransformation.md
       - Ingesting External CloudEvents: guides/cloudeventssource.md
