Add Kuma Mesh docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,7 @@ nav:
       - Ingesting External CloudEvents: guides/cloudeventssource.md
       - Exporting CloudEvents: guides/cloudeventstarget.md
       - Using TIL: guides/tilgettingstarted.md
+      - Using Kuma Mesh with Knative: guides/kuma.md
       - Bridges:
         - Webhook to Slack: guides/bridges/webhook-to-slack.md
     - Installation:
