--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
       - Transforming XML with XSLT: guides/xslttransformation.md
       - Ingesting External CloudEvents: guides/cloudeventssource.md
       - Exporting CloudEvents: guides/cloudeventstarget.md
+      - Connecting Clusters: guides/connectingclusters.md
       - Using TIL: guides/tilgettingstarted.md
       - Bridges:
         - Webhook to Slack: guides/bridges/webhook-to-slack.md
