Creates a Dead Letter Sink Guide (#271)
* Creates a DLS Guide.

* Update creatingadls.md

* Update creatingadls.md

* applied review suggestions

Co-authored-by: Sameer Naik <sameer@triggermesh.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
     - Guides:
       - Creating a Source: guides/creatingasource.md
       - Creating a Target: guides/creatingatarget.md
+      - Creating a DLS: guides/creatingadls.md
       - Creating a Wiretap: guides/createawiretap.md
       - Writing a Filter: guides/writingafilter.md
       - Creating a Splitter: guides/creatingasplitter.md
